added javafx launcher script